--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>SIGERSOL - Landing</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div id="app" class="wrap">
+    <!-- Panel IZQUIERDO: Municipal -->
+    <section class="panel panel--municipal">
+      <header class="panel__header">
+        <div class="panel__badge">🏛️</div>
+        <h1 class="panel__title">SIGERSOL MUNICIPAL</h1>
+      </header>
+
+      <div class="panel__grid">
+        <a class="tile" data-href="url_ciclo_vida">🏠 Reportes de ciclo de vida</a>
+        <a class="tile" data-href="url_resumen_anual">🗂️ Resumen de Reportes Anuales</a>
+        <a class="tile" data-href="url_instrumentos">🛠️ Instrumentos de Gestión</a>
+        <a class="tile" data-href="url_inaf_oefa">📁 Documentos INAF-OEFA</a>
+        <a class="tile" data-href="url_indicadores_mun">📊 Indicadores de Gestión</a>
+        <a class="tile" data-href="url_reporte_trimestral">🗓️ Reporte Trimestral</a>
+        <a class="tile" data-href="url_recicladores">🧍 Registro Nacional de Recicladores</a>
+      </div>
+
+      <div class="panel__callouts">
+        <div class="callout">🧾 Seguimiento al reporte del año 2024</div>
+        <div class="callout">🗺️ Información Georreferenciada</div>
+      </div>
+    </section>
+
+    <!-- Panel DERECHO: No Municipal -->
+    <section class="panel panel--no-municipal">
+      <header class="panel__header">
+        <div class="panel__badge">🏭</div>
+        <h1 class="panel__title">SIGERSOL NO MUNICIPAL</h1>
+      </header>
+
+      <div class="bullet">
+        <h2>Indicadores de Gestión de Residuos Sólidos No Municipal:</h2>
+        <ul>
+          <li>Informe del Operador de Residuos Sólidos</li>
+          <li>Registro de Manifiestos de Residuos Sólidos Peligrosos</li>
+          <li>Declaración Anual de Minimización</li>
+          <li>Declaración Anual del Productor AEE</li>
+          <li>Declaración Anual del Operador RAEE</li>
+        </ul>
+      </div>
+
+      <div class="cta-grid">
+        <a class="cta" data-href="url_informe_operador">📊 Informe del Operador V1.0</a>
+        <a class="cta" data-href="url_manifiestos">📄 Manifiestos SIGERSOL V1.0</a>
+        <a class="cta cta--wide" data-href="url_minimizacion">🗓️ Declaración anual sobre Minimización V1.0</a>
+      </div>
+    </section>
+  </div>
+  <script src="index.js"></script>
+</body>
+</html>
 
